--- a/src/pages/layout/components/User/User.module.scss
+++ b/src/pages/layout/components/User/User.module.scss
@@ -19,12 +19,11 @@
 
 @media (max-width: 1000px) {
   .root {
-		max-width: 100vw;
-    width: 100vw;
+		max-width: 100%;
+    width: 100%;
 		flex-direction: column-reverse;
 		row-gap: 16px;
-		
-  }
+	}
 
 	.user_info {
 		align-items: center;
